feat: Menu de opciones

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,7 +32,7 @@ const toggleMenu = () => {
     </div>
 
     <div class="flex md:hidden justify-between items-center w-full">
-      <ToggleMenuButton />
+      <ToggleMenuButton  client:load/>
       <div class="flex items-center gap-3">
         <IoPersonOutline className="w-6 h-6 text-green-900" />
         <IoHeartOutline className="w-6 h-6 text-green-900" />
