--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,7 +32,7 @@ const toggleMenu = () => {
     </div>
 
     <div class="flex md:hidden justify-between items-center w-full">
-      <ToggleMenuButton  client:load/>
+      <ToggleMenuButton client:load />
       <div class="flex items-center gap-3">
         <IoPersonOutline className="w-6 h-6 text-green-900" />
         <IoHeartOutline className="w-6 h-6 text-green-900" />
@@ -54,7 +54,7 @@ const toggleMenu = () => {
         <button
           class="px-4 py-1 rounded-full hover:bg-amber-100 hover:text-green-950 flex items-center gap-1 transition-all"
         >
-          TOURS
+          CATEGORIAS
           <span class="transform group-hover:rotate-180 transition-transform"
             >&#9662;</span
           >
