--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro";
+import ProductCardList from "../components/ProductCardList.astro";
 ---
 
 <!doctype html>
@@ -14,6 +15,7 @@ import Header from "../components/Header.astro";
   <body class="relative overflow-x-hidden">
     <main>
       <Header />
+      <ProductCardList />
       <slot />
     </main>
   </body>
