--- a/src/pages/shop/[slug].astro
+++ b/src/pages/shop/[slug].astro
@@ -9,7 +9,7 @@ const ropa: Ropa[] = [
     id: 1,
     title: "Camisa Algodón",
     price: 89.9,
-    image: "https://fakestoreapi.com/img/51eg55uWmdL._AC_UX679_.jpg",
+    images: ["https://fakestoreapi.com/img/51eg55uWmdL._AC_UX679_.jpg","https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"],
     description: "",
     color: ["blue", "black", "yellow"],
     category: Category.ROPA,
@@ -25,7 +25,7 @@ const zapatillas: Zapatilla[] = [
     id: 2,
     title: "Zapatilla Urbana",
     price: 159.9,
-    image: "https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg",
+    images: ["https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg","https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg","https://fakestoreapi.com/img/71li-ujtlUL._AC_UX679_.jpg"],
     description: "",
     color: ["green", "orange", "blue"],
     category: Category.CALZADO,
@@ -42,7 +42,7 @@ const accesorios: Accesorio[] = [
     id: 3,
     title: "Collar de Plata",
     price: 199.9,
-    image: "https://fakestoreapi.com/img/71YAIFU48IL._AC_UL640_QL65_ML3_.jpg",
+    images: ["https://fakestoreapi.com/img/71YAIFU48IL._AC_UL640_QL65_ML3_.jpg", "https://fakestoreapi.com/img/61sbMiUnoGL._AC_UL640_QL65_ML3_.jpg","https://fakestoreapi.com/img/51UDEzMJVpL._AC_UL640_QL65_ML3_.jpg" ],
     description: "",
     color: ["gold", "silver"],
     category: Category.ACCESORIOS,
@@ -53,13 +53,14 @@ const accesorios: Accesorio[] = [
   },
 ];
 
+
 const productos = [...ropa, ...zapatillas, ...accesorios];
 
 const productoPrueba: Ropa | Zapatilla | Accesorio = productos.find((v) => v.title === Astro.params.slug) ?? {
   id: 0,
   title: "",
   price: 0,
-  image: "",
+  images: [""],
   description: "",
   color: [],
   category: Category.ROPA,
@@ -85,21 +86,21 @@ const productoPrueba: Ropa | Zapatilla | Accesorio = productos.find((v) => v.tit
     </header>
     <section class="grid grid-cols-2 gap-4">
       <section class="w-full flex flex-col items-center justify-center gap-4">
-        <img
-          src={productoPrueba.image}
+        <!-- <img
+          src={productoPrueba.images}
           alt={productoPrueba.description}
           class="h-96 border rounded-lg p-4 border-gray-200 shadow"
-        />
+        /> -->
         <ul class="flex flex-row gap-2 w-96 max-w-96 overflow-x-auto">
-          {
+         <!--  {
             Array.from({ length: 6 }, (_, index) => (
             <img
-                  src={productoPrueba.image}
+                  src={productoPrueba.images}
                   alt={productoPrueba.description}
                   class="h-20 w-20 border rounded-lg p-4 border-gray-200 shadow"
                 />
             ))
-          }
+          } -->
         </ul>
       </section>
       <section class="flex flex-col gap-1">
