--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/Header.astro";
 import ProductCardList from "../components/ProductCardList.astro";
+import Footer from "../components/Footer.jsx";
 ---
 
 <!doctype html>
@@ -16,6 +17,7 @@ import ProductCardList from "../components/ProductCardList.astro";
     <main>
       <Header />
       <ProductCardList />
+      <Footer />
       <slot />
     </main>
   </body>
