--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Header from "../components/Header.astro";
-import ProductCardList from "../components/ProductCardList.astro";
 import Footer from "../components/Footer.jsx";
+import Filtros from "../components/Filtros.astro";
 ---
 
 <!doctype html>
@@ -16,7 +16,7 @@ import Footer from "../components/Footer.jsx";
   <body class="relative overflow-x-hidden">
     <main>
       <Header />
-      <ProductCardList />
+      <Filtros />
       <Footer />
       <slot />
     </main>
