--- a/src/pages/shop/[slug].astro
+++ b/src/pages/shop/[slug].astro
@@ -193,11 +193,11 @@ const { slug } = Astro.params; //obtiene el slug de la url
         </select>
       </section>
     </section>
-    <section
-      class="grid grid-cols-1 lg:grid-cols-2 px-16 gap-x-16 my-8 items-start justify-start"
-    >
-      <RatingSummary />
-      <AddComment />
+    <section class="grid grid-cols-1 lg:grid-cols-2 px-16 py-16">
+      <div class="flex lg:flex-row flex-col items-center gap-8 justify-between w-full col-span-full">
+        <RatingSummary />
+        <AddComment />
+      </div>
       <CommentsListComponent />
     </section>
     <Footer />
