--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,11 +24,13 @@ const toggleMenu = () => {
     class="w-full px-4 py-3 flex flex-col md:flex-row md:items-center justify-between space-y-4 md:space-y-0"
   >
     <div class="flex justify-between items-center w-full md:w-auto">
-      <img
-        src={logo.src}
-        alt="Logo de la empresa"
-        class="w-40 md:w-40 sm:w-52 mx-auto md:mx-0"
-      />
+      <a href="/">
+        <img
+          src={logo.src}
+          alt="Logo de la empresa"
+          class="w-40 md:w-40 sm:w-52 mx-auto md:mx-0"
+        />
+      </a>
     </div>
 
     <div class="flex md:hidden justify-between items-center w-full">
